# easifemGO

./: .gitignore  go.mod  go.sum  installBase.toml  main.go  schema.toml  test.toml
addons/: show_install_progress.go  spinner.go
cmd/: __clean.go  change_dir.go  clean.go  common.go  dev.go  get_bool_value.go  get_build_dir.go  get_build_system.go  get_ext_pkgs.go  get_install_dir.go  get_map_string_string.go  get_pkg.go  get_source_dir.go  get_string_slice_value.go  get_string_value.go  get_url.go  install.go  install_get_build_dir.go  install_get_env_vars.go  install_get_install_dir.go  install_get_pkg.go  install_get_source_dir.go  install_get_string_slice_value.go  install_get_string_value.go  install_get_url.go  install_make_dir.go  install_pkg_cmake.go  install_pkg_make.go  install_pkg_mason.go  install_run_command.go  lint.go  make_dir.go  make_install_dir.go  pkg.go  progress_tracking.go  project.go  root.go  run.go  run_command.go  run_install_command.go  (+4 more)
cmd/addons/: show_install_progress.go
cmd/easifem/: main.go
internal/: change_dir.go  clean.go  common.go  dev.go  install.go  install_progress_tracking.go  lint.go  pkg.go  project.go  root.go  run.go  setenv.go  spinner.go  test.go  version.go
test/: CMakeLists.txt  linter.toml  main.F90  module1.F90  module2.F90  runner.toml
tests/getter/: go.mod  main.go
tests/grab/test-1/: go.mod  main.go
