cmake_minimum_required(VERSION 3.20.0 FATAL_ERROR)
project("easifemApp")
enable_language(Fortran)

    if (NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
    endif()
    if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "GNU" OR Fortran_COMPILER_NAME MATCHES "gfortran*")
list(APPEND FORTRAN_FLAGS "-ffree-form" "-ffree-line-length-none" "-std=f2008" "-fimplicit-none")
list(APPEND FORTRAN_FLAGS_RELEASE "-O3")
list(APPEND FORTRAN_FLAGS_DEBUG  "-fbounds-check" "-g" "-fbacktrace" "-Wextra" "-Wall" "-fprofile-arcs" "-ftest-coverage" "-Wimplicit-interface" )
endif()
if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel" OR Fortran_COMPILER_NAME MATCHES "ifort*")
list(APPEND FORTRAN_FLAGS "-r8" "-W1")
list(APPEND FORTRAN_FLAGS_RELEASE "-O3")
list(APPEND FORTRAN_FLAGS_DEBUG "-O0" "-traceback" "-g" "-debug all" "-check all" "-ftrapuv" "-warn" "nointerfaces")
endif()
if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "XL" OR Fortran_COMPILER_NAME MATCHES "xlf*")
list(APPEND FORTRAN_FLAGS "-q64" "-qrealsize=8" "-qsuffix=f=f90:cpp=f90")
list(APPEND FORTRAN_FLAGS_RELEASE "-O3" "-qstrict")
list(APPEND FORTRAN_FLAGS_DEBUG "-O0" "-g" "-qfullpath" "-qkeepparm")
endif()
list(APPEND CMAKE_PREFIX_PATH  "/home/easifem/.easifem/easifem/install/sparsekit"  "/home/easifem/.easifem/easifem/install/lis"  "/home/easifem/.easifem/easifem/install/superlu"  "/home/easifem/.easifem/easifem/install/arpack"  "/home/easifem/.easifem/easifem/install/base"  "/home/easifem/.easifem/easifem/install/classes"  "/home/easifem/.easifem/easifem/install/fftw"  "/home/easifem/.easifem/easifem/install/lapack95"  "/home/easifem/.easifem/easifem/install/tomlf" )
find_package("easifemBase")
add_executable(main.out  main.F90 module1.F90 module2.F90)
target_link_libraries(main.out PRIVATE  easifemBase::easifemBase )
